# CppLox

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
.github/workflows/: msvc-analysis.yml
include/: buildin.hpp  callable.hpp  class.hpp  environment.hpp  error.hpp  expr.hpp  function.hpp  instance.hpp  interpreter.hpp  lexer.hpp  logging.hpp  parser.hpp  resolver.hpp  stmt.hpp  token.hpp  visitor.hpp
samples/: builtins.lox  classes.lox  closures.lox  fib.lox  functions.lox  getters.lox  gettters.lox  lambas.lox  lambdas.lox  nested_functions.lox  roman_to_integer.lox  test.lox  unbound.lox  valid.lox
src/: CMakeLists.txt  buildin.cpp  callable.cpp  class.cpp  environment.cpp  error.cpp  expr.cpp  function.cpp  instance.cpp  interpreter.cpp  lexer.cpp  logging.cpp  parser.cpp  resolver.cpp  stmt.cpp  token.cpp
