add_library(Lexer STATIC lexer.cpp)
add_library(Interpreter STATIC interpreter.cpp)
add_library(Expr STATIC expr.cpp)
add_library(Error STATIC error.cpp)
add_library(Parser STATIC parser.cpp)
add_library(Stmt STATIC stmt.cpp)
add_library(Token STATIC token.cpp)
add_library(Environment STATIC environment.cpp)
add_library(Function STATIC function.cpp)
add_library(Buildin STATIC buildin.cpp)
add_library(Logging STATIC logging.cpp)
add_library(Resolver STATIC resolver.cpp)
add_library(Class STATIC class.cpp)
add_library(Instance STATIC instance.cpp)